--- a/task6.ipynb
+++ b/task6.ipynb
@@ -128,6 +128,16 @@
     "    print(\"Error\")\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Error нет оператора сравнения.\n",
+    "# Строки сравнивают по числовым значениям символов в строке."
+   ]
   }
  ],
  "metadata": {
