--- a/task_csv.ipynb
+++ b/task_csv.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,14 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = []\n",
     "with open(\"./annual-enterprise-survey-2018-financial-year-provisional-csv.csv\", 'r') as file:\n",
     "    # Начало вашего кода \n",
-    "    data = list(csv.reader(file))\n",
+    "    data = list(csv.reader(file, delimiter = \",\"))\n",
     "    # Конец вашего кода\n",
     "\n",
     "col_titles = data[:1]\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -126,32 +126,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-18-bb7ff38e94bf>, line 6)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-bb7ff38e94bf>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    # Конец вашего кода\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "execution_count": 61,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "unique_levels = set()\n",
     "\n",
     "for row in data:\n",
     "    # Начало вашего кода \n",
-    "    unique_levels = set(data)\n",
+    "    unique_levels.update(row[1:2])\n",
+    "  \n",
     "    # Конец вашего кода"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 62,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'Level 1', 'Level 4', 'Level 3'}\n3\n"
+     ]
+    }
+   ],
    "source": [
     "print(unique_levels)\n",
     "print(len(unique_levels))"
@@ -177,23 +181,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 135,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "unique_industries = set()\n",
     "\n",
     "for row in data:\n",
     "    # Начало вашего кода \n",
-    "\n",
+    "    unique_industries.update(row[3:4])\n",
     "    # Конец вашего кода"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'Other Store-Based Retailing and Non Store Retailing', 'Tertiary Education', 'Construction Services', 'Electronic and Electrical Equipment Manufacturing', 'Electricity, Gas, Water and Waste Services', 'Adult, Community and Other Education', 'Electricity and Gas Supply', 'Polymer Product and Rubber Product Manufacturing', 'Grocery, Liquor and Tobacco Product Wholesaling', 'Wood Product Manufacturing', 'Real Estate Services', 'Insurance', 'Personal Care, Funeral and Other Personal Services', 'Gambling Activities', 'Machinery and Other Equipment Manufacturing', 'Heritage and Artistic Activities', 'Advertising, Market Research and Management Services', 'Agriculture, Forestry and Fishing', 'Professional, Scientific and Technical Services', 'Veterinary and Other Professional Services', 'Postal and Courier Pick Up and Delivery Services', 'Transport Equipment Manufacturing', 'Mining', 'Non-Residential Building Construction', 'Construction', 'Building Cleaning, Pest Control and Other Support Services', 'Retail Trade and Accommodation', 'Rental, Hiring and Real Estate Services', 'Legal and Accounting Services', 'Non-Residential Property Operation', 'All industries', 'Transport Support Services', 'Health and General Insurance', 'Transport, Postal and Warehousing', 'Machinery and Equipment Wholesaling', 'Residential Building Construction', 'Building Construction', 'Agriculture, Forestry and Fishing Support Services and Hunting', 'Health Care and Social Assistance', 'Medical and Other Health Care Services', 'Sheep, Beef Cattle and Grain Farming', 'Beverage and Tobacco Product Manufacturing', 'Basic Chemical and Basic Polymer Manufacturing', 'Public Order, Safety and Regulatory Services', 'Machinery Manufacturing', 'Food product manufacturing', 'Telecommunications, Internet and Library Services', 'Motor Vehicle and Motor Vehicle Parts Wholesaling', 'Arts, Recreation and Other Services', 'Information Media Services', 'Clothing, Knitted Products and Footwear Manufacturing', 'Auxiliary Finance and Insurance Services', 'Public order, safety and regulatory services', 'Fertiliser and Pesticide Manufacturing', 'Furniture and Other Manufacturing', 'Poultry, Deer and Other Livestock Farming', 'Other Services', 'Arts and Recreation Services', 'Postal, Courier, Transport Support, and Warehousing Services', 'Dairy Cattle Farming', 'Rail, Water, Air and Other Transport', 'Printing', 'Administrative and Support Services', 'Motor Vehicle and Motor Vehicle Parts and Fuel Retailing', 'Heavy and Civil Engineering Construction', 'Recreational, Clothing, Footwear and Personal Accessory Retailing', 'Non-Metallic Mineral Product Manufacturing', 'Fishing and Aquaculture', 'Professional, Scientific, Technical, Administrative and Support Services', 'Pharmaceutical, Cleaning and Other Chemical Manufacturing', 'Manufacturing', 'Accommodation', 'Employment and Other Administrative Services', 'Commission Based Wholesaling', 'Department Stores', 'School Education', 'Information Media and Telecommunications', 'Warehousing and Storage Services', 'Water, Sewerage, Drainage and Waste Services', 'Repair and Maintenance', 'Road Transport', 'Furniture Manufacturing', 'Non-Store and Commission Based Retailing', 'Education and Training', 'Textile and Leather Manufacturing', 'Scientific, Architectural and Engineering Services', 'Horticulture and Fruit Growing', 'Financial Asset Investing', 'Computer System Design and Related Services', 'Banking and Financing', 'Pharmaceutical and Other Store Based Retailing', 'Life Insurance', 'Hospitals', 'Other Manufacturing', 'Rental and Hiring Services (except Real Estate)', 'Food and Beverage Services', 'Accommodation and Food Services', 'Furniture, Electrical and Hardware Retailing', 'Preschool Education', 'Pulp, Paper and Converted Paper Product Manufacturing', 'Textile, Leather, Clothing and Footwear Manufacturing', 'Property Operators and Real Estate Services', 'Residential Care Services and Social Assistance', 'Fabricated Metal Product Manufacturing', 'Primary Metal and Metal Product Manufacturing', 'Non-Financial Asset Leasing', 'Financial and Insurance Services', 'Forestry and Logging', 'Other Goods Wholesaling', 'Finance', 'Sport and Recreation Activities', 'Basic Material Wholesaling', 'Civil, Professional and Other Interest Groups', 'Petroleum and Coal Product Manufacturing', 'Basic Chemical and Chemical Product Manufacturing', 'Food Product Manufacturing', 'Wholesale Trade', 'Travel Agency and Tour Arrangement Services', 'Supermarket, Grocery Stores and Specialised Food Retailing'}\n119\n"
+     ]
+    }
+   ],
    "source": [
     "print(unique_industries)\n",
     "print(len(unique_industries))"
@@ -219,15 +233,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 167,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'2015', '2013', '2018', '2017', '2014', '2016'}\n"
+     ]
+    }
+   ],
    "source": [
     "unique_years = set()\n",
     "\n",
     "for row in data:\n",
     "    # Начало вашего кода \n",
-    "\n",
+    "    unique_years.update(row[0:1])\n",
     "    # Конец вашего кода\n",
     "print(unique_years)"
    ]
@@ -244,14 +268,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2015.csv is written\n2013.csv is written\n2018.csv is written\n2017.csv is written\n2014.csv is written\n2016.csv is written\n"
+     ]
+    }
+   ],
    "source": [
     "for year in unique_years:\n",
     "    with open(\"{}.csv\".format(year), \"w\") as ofile:\n",
     "        # Начало вашего кода \n",
-    "\n",
+    "        writer = csv.writer(ofile)\n",
+    "        writer.writerows('')\n",
     "        # Конец вашего кода\n",
     "        print(\"{}.csv is written\".format(year))"
    ]
@@ -273,9 +306,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['annual-enterprise-survey-2019-financial-year-provisional-csv.csv', 'annual-enterprise-survey-2018-financial-year-provisional-csv.csv']\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -302,6 +343,48 @@
    "source": [
     "### 4. Дополнительно: просто попробуйте проанализировать больше данных из csv-файла, используя все имеющиеся у вас знания. Пример: сортировка данных по конкретному столбцу."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum_values = 0\n",
+    "\n",
+    "for row in data:\n",
+    "    # Начало вашего кода \n",
+    "    for i in row[8:9]:\n",
+    "        try:\n",
+    "            sum_values += int(i)\n",
+    "        except:\n",
+    "            continue\n",
+    "    # Конец вашего кода"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "808474992\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
