--- a/task_practice2.ipynb
+++ b/task_practice2.ipynb
@@ -362,6 +362,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Словарь отсортировать нельзя. Так как это неупорядоченный набор данных ключ - значение. "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -398,7 +407,7 @@
    "outputs": [],
    "source": [
     "# Код\n",
-    "a = tuple()"
+    "a = tuple(1, 2, 3)"
    ]
   },
   {
@@ -433,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
