csv and oop dane

--- a/task_csv.ipynb
+++ b/task_csv.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,17 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[['Year', 'Industry_aggregation_NZSIOC', 'Industry_code_NZSIOC', 'Industry_name_NZSIOC', 'Units', 'Variable_code', 'Variable_name', 'Variable_category', 'Value', 'Industry_code_ANZSIC06']]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "print(col_titles)"
    ]
@@ -64,17 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[['2018', 'Level 1', '99999', 'All industries', 'Dollars (millions)', 'H01', 'Total income', 'Financial performance', '691859', 'ANZSIC06 divisions A-S (excluding classes K6330, L6711, O7552, O760, O771, O772, S9540, S9601, S9602, and S9603)'], ['2018', 'Level 1', '99999', 'All industries', 'Dollars (millions)', 'H04', 'Sales, government funding, grants and subsidies', 'Financial performance', '605766', 'ANZSIC06 divisions A-S (excluding classes K6330, L6711, O7552, O760, O771, O772, S9540, S9601, S9602, and S9603)'], ['2018', 'Level 1', '99999', 'All industries', 'Dollars (millions)', 'H05', 'Interest, dividends and donations', 'Financial performance', '63509', 'ANZSIC06 divisions A-S (excluding classes K6330, L6711, O7552, O760, O771, O772, S9540, S9601, S9602, and S9603)'], ['2018', 'Level 1', '99999', 'All industries', 'Dollars (millions)', 'H07', 'Non-operating income', 'Financial performance', '22583', 'ANZSIC06 divisions A-S (excluding classes K6330, L6711, O7552, O760, O771, O772, S9540, S9601, S9602, and S9603)'], ['2018', 'Level 1', '99999', 'All industries', 'Dollars (millions)', 'H08', 'Total expenditure', 'Financial performance', '597623', 'ANZSIC06 divisions A-S (excluding classes K6330, L6711, O7552, O760, O771, O772, S9540, S9601, S9602, and S9603)']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(data[:5])"
    ]
@@ -91,17 +77,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[['2013', 'Level 3', 'ZZ11', 'Food product manufacturing', 'Percentage', 'H37', 'Quick ratio', 'Financial ratios', '52', 'ANZSIC06 groups C111, C112, C113, C114, C115, C116, C117, C118, and C119'], ['2013', 'Level 3', 'ZZ11', 'Food product manufacturing', 'Percentage', 'H38', 'Margin on sales of goods for resale', 'Financial ratios', '40', 'ANZSIC06 groups C111, C112, C113, C114, C115, C116, C117, C118, and C119'], ['2013', 'Level 3', 'ZZ11', 'Food product manufacturing', 'Percentage', 'H39', 'Return on equity', 'Financial ratios', '12', 'ANZSIC06 groups C111, C112, C113, C114, C115, C116, C117, C118, and C119'], ['2013', 'Level 3', 'ZZ11', 'Food product manufacturing', 'Percentage', 'H40', 'Return on total assets', 'Financial ratios', '5', 'ANZSIC06 groups C111, C112, C113, C114, C115, C116, C117, C118, and C119'], ['2013', 'Level 3', 'ZZ11', 'Food product manufacturing', 'Percentage', 'H41', 'Liabilities structure', 'Financial ratios', '46', 'ANZSIC06 groups C111, C112, C113, C114, C115, C116, C117, C118, and C119']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(data[-5:])"
    ]
@@ -126,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -136,26 +114,18 @@
     "\n",
     "for row in data:\n",
     "    # Начало вашего кода \n",
-    "    unique_levels.update(row[1:2])\n",
+    "    unique_levels.add(row[1])\n",
     "  \n",
     "    # Конец вашего кода"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "{'Level 1', 'Level 4', 'Level 3'}\n3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(unique_levels)\n",
     "print(len(unique_levels))"
@@ -181,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -191,23 +161,15 @@
     "\n",
     "for row in data:\n",
     "    # Начало вашего кода \n",
-    "    unique_industries.update(row[3:4])\n",
+    "    unique_industries.add(row[3])\n",
     "    # Конец вашего кода"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "{'Other Store-Based Retailing and Non Store Retailing', 'Tertiary Education', 'Construction Services', 'Electronic and Electrical Equipment Manufacturing', 'Electricity, Gas, Water and Waste Services', 'Adult, Community and Other Education', 'Electricity and Gas Supply', 'Polymer Product and Rubber Product Manufacturing', 'Grocery, Liquor and Tobacco Product Wholesaling', 'Wood Product Manufacturing', 'Real Estate Services', 'Insurance', 'Personal Care, Funeral and Other Personal Services', 'Gambling Activities', 'Machinery and Other Equipment Manufacturing', 'Heritage and Artistic Activities', 'Advertising, Market Research and Management Services', 'Agriculture, Forestry and Fishing', 'Professional, Scientific and Technical Services', 'Veterinary and Other Professional Services', 'Postal and Courier Pick Up and Delivery Services', 'Transport Equipment Manufacturing', 'Mining', 'Non-Residential Building Construction', 'Construction', 'Building Cleaning, Pest Control and Other Support Services', 'Retail Trade and Accommodation', 'Rental, Hiring and Real Estate Services', 'Legal and Accounting Services', 'Non-Residential Property Operation', 'All industries', 'Transport Support Services', 'Health and General Insurance', 'Transport, Postal and Warehousing', 'Machinery and Equipment Wholesaling', 'Residential Building Construction', 'Building Construction', 'Agriculture, Forestry and Fishing Support Services and Hunting', 'Health Care and Social Assistance', 'Medical and Other Health Care Services', 'Sheep, Beef Cattle and Grain Farming', 'Beverage and Tobacco Product Manufacturing', 'Basic Chemical and Basic Polymer Manufacturing', 'Public Order, Safety and Regulatory Services', 'Machinery Manufacturing', 'Food product manufacturing', 'Telecommunications, Internet and Library Services', 'Motor Vehicle and Motor Vehicle Parts Wholesaling', 'Arts, Recreation and Other Services', 'Information Media Services', 'Clothing, Knitted Products and Footwear Manufacturing', 'Auxiliary Finance and Insurance Services', 'Public order, safety and regulatory services', 'Fertiliser and Pesticide Manufacturing', 'Furniture and Other Manufacturing', 'Poultry, Deer and Other Livestock Farming', 'Other Services', 'Arts and Recreation Services', 'Postal, Courier, Transport Support, and Warehousing Services', 'Dairy Cattle Farming', 'Rail, Water, Air and Other Transport', 'Printing', 'Administrative and Support Services', 'Motor Vehicle and Motor Vehicle Parts and Fuel Retailing', 'Heavy and Civil Engineering Construction', 'Recreational, Clothing, Footwear and Personal Accessory Retailing', 'Non-Metallic Mineral Product Manufacturing', 'Fishing and Aquaculture', 'Professional, Scientific, Technical, Administrative and Support Services', 'Pharmaceutical, Cleaning and Other Chemical Manufacturing', 'Manufacturing', 'Accommodation', 'Employment and Other Administrative Services', 'Commission Based Wholesaling', 'Department Stores', 'School Education', 'Information Media and Telecommunications', 'Warehousing and Storage Services', 'Water, Sewerage, Drainage and Waste Services', 'Repair and Maintenance', 'Road Transport', 'Furniture Manufacturing', 'Non-Store and Commission Based Retailing', 'Education and Training', 'Textile and Leather Manufacturing', 'Scientific, Architectural and Engineering Services', 'Horticulture and Fruit Growing', 'Financial Asset Investing', 'Computer System Design and Related Services', 'Banking and Financing', 'Pharmaceutical and Other Store Based Retailing', 'Life Insurance', 'Hospitals', 'Other Manufacturing', 'Rental and Hiring Services (except Real Estate)', 'Food and Beverage Services', 'Accommodation and Food Services', 'Furniture, Electrical and Hardware Retailing', 'Preschool Education', 'Pulp, Paper and Converted Paper Product Manufacturing', 'Textile, Leather, Clothing and Footwear Manufacturing', 'Property Operators and Real Estate Services', 'Residential Care Services and Social Assistance', 'Fabricated Metal Product Manufacturing', 'Primary Metal and Metal Product Manufacturing', 'Non-Financial Asset Leasing', 'Financial and Insurance Services', 'Forestry and Logging', 'Other Goods Wholesaling', 'Finance', 'Sport and Recreation Activities', 'Basic Material Wholesaling', 'Civil, Professional and Other Interest Groups', 'Petroleum and Coal Product Manufacturing', 'Basic Chemical and Chemical Product Manufacturing', 'Food Product Manufacturing', 'Wholesale Trade', 'Travel Agency and Tour Arrangement Services', 'Supermarket, Grocery Stores and Specialised Food Retailing'}\n119\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(unique_industries)\n",
     "print(len(unique_industries))"
@@ -233,25 +195,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "{'2015', '2013', '2018', '2017', '2014', '2016'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "unique_years = set()\n",
     "\n",
     "for row in data:\n",
     "    # Начало вашего кода \n",
-    "    unique_years.update(row[0:1])\n",
+    "    unique_years.add(row[0])\n",
     "    # Конец вашего кода\n",
     "print(unique_years)"
    ]
@@ -268,17 +222,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "2015.csv is written\n2013.csv is written\n2018.csv is written\n2017.csv is written\n2014.csv is written\n2016.csv is written\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for year in unique_years:\n",
     "    with open(\"{}.csv\".format(year), \"w\") as ofile:\n",
@@ -306,17 +252,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "['annual-enterprise-survey-2019-financial-year-provisional-csv.csv', 'annual-enterprise-survey-2018-financial-year-provisional-csv.csv']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -346,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,17 +302,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "808474992\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(sum_values)"
    ]
