--- a/task_oop2.ipynb
+++ b/task_oop2.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,8 @@
     "    def year_born(self, cur_year):\n",
     "        year_bor = cur_year - self.age\n",
     "        print('{} {} was born in {}'.format(self.name, self.family_name, year_bor))\n",
+    "        return year_bor\n",
+    "        \n",
     "    def get_name(self):\n",
     "        return self.name\n",
     "    def get_nationality(self):\n",
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,9 +61,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Brad Pitt was born in 1969\n"
+     ]
+    }
+   ],
    "source": [
     "year_born = person1.year_born(cur_year=2019)"
    ]
@@ -78,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "None\nBrad\n50\nAmerican\nactor\n1\n"
+      "1969\nBrad\n50\nAmerican\nactor\n1\n"
      ]
     }
    ],
