--- a/task_practice3.ipynb
+++ b/task_practice3.ipynb
@@ -14,7 +14,10 @@
    "outputs": [],
    "source": [
     "st = 'Print only the words that start with t in this sentence'\n",
-    "# Код\n"
+    "# Код\n",
+    "for i in st.split():\n",
+    "    if i.startswith('t'):\n",
+    "        print(i, end=' ')"
    ]
   },
   {
@@ -30,7 +33,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Код"
+    "# Код\n",
+    "x = list(range(0,11,2))\n",
+    "print(x)"
    ]
   },
   {
@@ -46,7 +51,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Код"
+    "# Код\n",
+    "l = list(range(0,50,3))\n",
+    "print(l)"
    ]
   },
   {
@@ -63,7 +70,10 @@
    "outputs": [],
    "source": [
     "st = 'Print every word in this sentence that has an even number of letters'\n",
-    "# Код\n"
+    "# Код\n",
+    "for i in st.split():\n",
+    "    if len(i)%2==0:\n",
+    "        print('четное!')"
    ]
   },
   {
@@ -80,7 +90,11 @@
    "outputs": [],
    "source": [
     "st = 'Create a list of the first letters of every word in this string'\n",
-    "# Код"
+    "# Код\n",
+    "x = []\n",
+    "for i in st.split(' '):\n",
+    "    x.extend(i[0])\n",
+    "print(x)"
    ]
   },
   {
@@ -96,7 +110,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from math import *\n",
     "l = [1,2,3,4,5,6,7,8,9,10]\n",
+    "s = sum(l)\n",
+    "print(s)\n",
     "# Код 1"
    ]
   },
@@ -107,6 +124,10 @@
    "outputs": [],
    "source": [
     "l = [1,2,3,4,5,6,7,8,9,10]\n",
+    "s = 0\n",
+    "for i in l:\n",
+    "    s += i\n",
+    "print(s)\n",
     "# Код 2"
    ]
   },
@@ -124,7 +145,11 @@
    "outputs": [],
    "source": [
     "l = [2,5,7,3,9]\n",
-    "# Код"
+    "# Код\n",
+    "mult = 1\n",
+    "for a in l:\n",
+    "    mult *= a\n",
+    "print(mult)"
    ]
   },
   {
@@ -140,8 +165,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l = [2,5,7,3,9,11,50,101]\n",
-    "# Код"
+    "l = [2,5,7,3,9,11,101,50]\n",
+    "# Код\n",
+    "k = sorted(l)\n",
+    "print(k[-1])"
    ]
   },
   {
@@ -159,7 +186,12 @@
    "source": [
     "team_1 = [\"Darkhan\", \"Abilay\", \"Azamat\", \"Zhasulan\"]\n",
     "team_2 = [\"Azamat\", \"Darkhan\", \"Aset\", \"Bolat\",\"Saken\"]\n",
-    "# Код"
+    "# Код\n",
+    "team_3 = []\n",
+    "for i in team_1:\n",
+    "    if i in team_2:\n",
+    "        team_3.append(i)\n",
+    "print(team_3)"
    ]
   },
   {
@@ -178,7 +210,9 @@
     "l_1 = [10,20,30]\n",
     "l_2 = [1,2,3,4,5,6]\n",
     "# Вывод должен быть: [10,20,30,1,2,3,4,5,6]\n",
-    "# Код      "
+    "# Код ;-)\n",
+    "l_1.extend(l_2)\n",
+    "print(l_1)"
    ]
   },
   {
@@ -195,7 +229,11 @@
    "outputs": [],
    "source": [
     "my_dict = {'data1':100,'data2':-54,'data3':247}\n",
-    "# Код"
+    "# Код\n",
+    "sumka = 0\n",
+    "for i in my_dict.values():\n",
+    "    sumka += i\n",
+    "print(sumka)"
    ]
   },
   {
@@ -211,8 +249,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from math import *\n",
     "my_dict = {'data1':100,'data2':-54,'data3':247}\n",
-    "# Код"
+    "# Код\n",
+    "list_min = min(my_dict.values())\n",
+    "list_max = max(my_dict.values())\n",
+    "print('max:{}\\nmin:{}'.format(list_max, list_min))"
    ]
   },
   {
@@ -220,6 +262,16 @@
    "metadata": {},
    "source": [
     "13) Напишите программу на Python, чтобы найти те числа, которые делятся на 7 и кратны 5, между 1500 и 2700 (оба включены)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = [i for i in range(1500,2701) if i%7==0 and i%5==0]\n",
+    "print(l)"
    ]
   },
   {
@@ -236,7 +288,15 @@
    "outputs": [],
    "source": [
     "numbers = (10,11,12,13,14,15,16,17,18,19,20)\n",
-    "# Код"
+    "# Код\n",
+    "count_evens = 0\n",
+    "count_odds = 0\n",
+    "for even in numbers:\n",
+    "    if even % 2 == 0:\n",
+    "        count_evens += 1\n",
+    "    else:\n",
+    "        count_odds += 1\n",
+    "print('There are {} even numbers and {} odd numbers'.format(count_evens, count_odds))"
    ]
   },
   {
@@ -247,12 +307,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fibonacciani(n):\n",
+    "    fibonacci = []\n",
+    "    a = 0\n",
+    "    b = 1\n",
+    "    for i in range(n):\n",
+    "        fibonacci.append(a)\n",
+    "        a,b = b, a+b\n",
+    "        if a > n:\n",
+    "            break\n",
+    "    return fibonacci\n",
+    "f = fibonacciani(50)\n",
+    "print(f)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "16) Напишите программу на Python для расчета возраста собаки по собачьим годам.(Для заданного числа 12, вывод должен быть 61 = 2x10.5+10x4)\n",
     "\n",
     "**Примечание: в течение первых двух лет год собаки равен 10,5 человеческим годам. После этого каждый год собаки равен 4 человеческим годам.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dog_ages_converter(dog_age):\n",
+    "    human_age = 0\n",
+    "    i = 1\n",
+    "    for age in range(dog_age):\n",
+    "        while i <=2:\n",
+    "            human_age += 10.5\n",
+    "            i += 1\n",
+    "        human_age += 4\n",
+    "    return human_age\n",
+    "test = dog_ages_converter(12)\n",
+    "print(test)"
    ]
   },
   {
@@ -331,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
