--- a/task_practice3.ipynb
+++ b/task_practice3.ipynb
@@ -343,13 +343,12 @@
    "source": [
     "def dog_ages_converter(dog_age):\n",
     "    human_age = 0\n",
-    "    i = 1\n",
     "    for age in range(dog_age):\n",
-    "        while i <=2:\n",
+    "        if age < 2:\n",
     "            human_age += 10.5\n",
-    "            i += 1\n",
-    "        human_age += 4\n",
-    "    return human_age\n",
+    "        elif age >= 2:\n",
+    "            human_age += 4\n",
+    "    return int(human_age)\n",
     "test = dog_ages_converter(12)\n",
     "print(test)"
    ]
@@ -359,6 +358,22 @@
    "metadata": {},
    "source": [
     "17) Напишите программу на Python для преобразования названия месяца в количество дней."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def how_many_days_in_months(month):\n",
+    "    if month.title() in ['January', 'March', 'May', 'July', 'August', 'October', 'December', 'Январь', 'Март', 'Май', 'Июль', 'Август', 'Октябрь', 'Декабрь']:\n",
+    "        return 'There are 31 days in {}'.format(month.title())\n",
+    "    elif month.title() in ['April', 'June', 'September', 'November', 'Апрель', 'Июнь', 'Сентябрь', 'Ноябрь']:\n",
+    "        return 'There are 30 days in {}'.format(month.title())\n",
+    "    elif month.title() in ['February', 'Февраль']:\n",
+    "        return 'There are 28/29 days in {}'.format(month.title())\n",
+    "print(how_many_days_in_months('september'))"
    ]
   },
   {
@@ -377,7 +392,11 @@
    "outputs": [],
    "source": [
     "word = \"aibohphobia\"\n",
-    "# Код"
+    "# Код\n",
+    "if word[::-1] == word:\n",
+    "    print('The word is a palindrome')\n",
+    "else:\n",
+    "    print('The word is not a palindrome')"
    ]
   },
   {
@@ -396,7 +415,15 @@
    "outputs": [],
    "source": [
     "students = [1, 11, 13, 6, 14, 10, 23, 25, 16, 23, 30, 9]\n",
-    "# Код"
+    "# Код\n",
+    "teamA = []\n",
+    "teamB = []\n",
+    "for i in range(len(students)):\n",
+    "  if i%2==0:\n",
+    "    teamA.append(students[i])\n",
+    "  else:\n",
+    "    teamB.append(students[i])\n",
+    "print(sum(teamA) - sum(teamB))"
    ]
   },
   {
@@ -404,6 +431,23 @@
    "metadata": {},
    "source": [
     "20) Напишите программу на Python, чтобы найти числа от 100 до 400 (оба включены), где каждая цифра числа является четным числом. Полученные числа должны быть напечатаны в последовательности через запятую."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cool_list = []\n",
+    "for i in range(100, 401):\n",
+    "    a = int(str(i)[0])\n",
+    "    b = int(str(i)[1])\n",
+    "    c = int(str(i)[2])\n",
+    "    if a%2==0 and b%2==0 and c%2==0:\n",
+    "      cool_list.append(i)\n",
+    "for j in cool_list:\n",
+    "  print(j, end=',')\n"
    ]
   },
   {
