--- a/task_lists.ipynb
+++ b/task_lists.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -102,10 +102,12 @@
    ],
    "source": [
     "# Начало вашего кода\n",
-    "arrt = []\n",
-    "arrt=[[n[i] for n in arr4] for i in range(len(arr4[0]))]\n",
-    "arr4.clear()\n",
-    "arr4.extend(arrt)\n",
+    "#arrt = []\n",
+    "#arrt=[[n[i] for n in arr4] for i in range(len(arr4[0]))]\n",
+    "#arr4.clear()\n",
+    "#arr4.extend(arrt)\n",
+    "arr4 = [[1,2,3],[4,5,6]]\n",
+    "arr4=list(map(list, zip(*arr4)))\n",
     "# Конец вашего кода\n",
     "print(arr4)"
    ]
